Some cleaning and improving on common, logging, tracing

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -34,7 +34,9 @@
 
 cmake_minimum_required ( VERSION 2.8 )
 
-project( common CXX )
+# Note: also use C language as FindThreds does not work otherwise 
+
+project( common CXX C )
 
 set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
@@ -46,13 +48,6 @@ if (NOT CMAKE_BUILD_TYPE)
       FORCE)
 endif (NOT CMAKE_BUILD_TYPE)
 
-### Boost thread required
-
-set ( Boost_DEBUG TRUE )
-set ( Boost_DETAILED_FAILURE_MSG TRUE )
-
-find_package ( Boost COMPONENTS thread REQUIRED )
-
 ### Define variables needed for common library 
 ### Variables are put in the cache so they might be used in other scopes
 
@@ -62,13 +57,17 @@ set ( COMMON_LIBRARY common
 set ( COMMON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} 
       CACHE PATH "common include directory" )
 
-mark_as_advanced( COMMON_INCLUDE_DIR COMMON_LIBRARY )
+mark_as_advanced ( COMMON_INCLUDE_DIR COMMON_LIBRARY )
+
+###  Here we use PThread library for threads
+###  Note: FindThreads in CMake is available as Module, but is buggy, needs update of CheckIncludeFiles.cmake
+
+find_library( PTHREADS_LIBRARY NAMES pthread pthreads )
 
 file( GLOB CPP_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" )
 file( GLOB HPP_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/common/*.hpp" )
 
 include_directories( ${COMMON_INCLUDE_DIR} )
-include_directories( ${Boost_INCLUDE_DIR} )
 
 if ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
@@ -77,8 +76,13 @@ endif ( WIN32 )
 ### add library and put path to search path ###
 
 add_library ( ${COMMON_LIBRARY} SHARED ${CPP_SOURCES} )
-target_link_libraries( ${COMMON_LIBRARY} ${Boost_THREAD_LIBRARY} )
+target_link_libraries( ${COMMON_LIBRARY} ${PTHREADS_LIBRARY} )
 
+if ( CMAKE_COMPILER_IS_GNUCXX )
+#   set_target_properties( ${COMMON_LIBRARY} PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+endif ()
+
+add_subdirectory ( examples )
 ### install ###
 
 install ( TARGETS ${COMMON_LIBRARY} DESTINATION lib )
