--- a/tracing/examples/CMakeLists.txt
+++ b/tracing/examples/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_definitions( -DLAMA_TRACE_ON )
 
 add_executable( TraceTest TraceTest.cpp )
-target_link_libraries( TraceTest ${TRACING_LIBRARY} )
+target_link_libraries( TraceTest ${TRACING_LIBRARY} ${COMMON_LIBRARY} )
 
 add_executable( TraceCalls TraceCalls.cpp )
-target_link_libraries( TraceCalls ${TRACING_LIBRARY} )
+target_link_libraries( TraceCalls ${TRACING_LIBRARY} ${COMMON_LIBRARY} )
