Use of RecursiveMutex for lama, update of examples

--- a/src/lama/CMakeLists.txt
+++ b/src/lama/CMakeLists.txt
@@ -215,10 +215,10 @@ if ( LAMA_BLAS_FOUND )
     set ( ADDITIONAL_EXTERNAL_LINKER_FLAGS ${ADDITIONAL_EXTERNAL_LINKER_FLAGS} ${LAMAPP_LINK_LIBRARIES} )
 endif( LAMA_BLAS_FOUND )
 
-# boost thread
+# thread library
 if ( NOT WIN32 )
-    set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${LAMA_THREAD_LIBRARY} )
-    set ( ADDITIONAL_EXTERNAL_LINKER_FLAGS ${ADDITIONAL_EXTERNAL_LINKER_FLAGS} ${LAMA_THREAD_LIBRARY} )
+    # set ( LAMA_LINK_LIBRARIES ${LAMA_LINK_LIBRARIES} ${LAMA_THREAD_LIBRARY} )
+    # set ( ADDITIONAL_EXTERNAL_LINKER_FLAGS ${ADDITIONAL_EXTERNAL_LINKER_FLAGS} ${LAMA_THREAD_LIBRARY} )
 endif ( NOT WIN32 )
 
 # generate additional linker flags for the examples
