Exception in common library now with callstack like LAMA, added test

--- a/common/examples/CMakeLists.txt
+++ b/common/examples/CMakeLists.txt
@@ -35,3 +35,5 @@
 add_executable( CommonTest CommonTest.cpp )
 target_link_libraries( CommonTest ${COMMON_LIBRARY} )
 
+add_executable( ExceptionTest ExceptionTest.cpp )
+target_link_libraries( ExceptionTest ${COMMON_LIBRARY} )
