--- a/common/examples/CMakeLists.txt
+++ b/common/examples/CMakeLists.txt
@@ -32,8 +32,11 @@
 
 # ThreadTest example
 
+add_executable( ExceptionTest ExceptionTest.cpp )
+target_link_libraries( ExceptionTest ${COMMON_LIBRARY} )
+
 add_executable( CommonTest CommonTest.cpp )
 target_link_libraries( CommonTest ${COMMON_LIBRARY} )
 
-add_executable( ExceptionTest ExceptionTest.cpp )
-target_link_libraries( ExceptionTest ${COMMON_LIBRARY} )
+add_executable( ConditionTest ConditionTest.cpp )
+target_link_libraries( ConditionTest ${COMMON_LIBRARY} )
