Added benchmark program for comparison of Task vs Thread

--- a/tasking/examples/CMakeLists.txt
+++ b/tasking/examples/CMakeLists.txt
@@ -35,3 +35,5 @@
 add_executable( ThreadPoolTest ThreadPoolTest.cpp )
 target_link_libraries( ThreadPoolTest ${TASKING_LIBRARY} )
 
+add_executable( BenchTasking BenchTasking.cpp )
+target_link_libraries( BenchTasking ${TASKING_LIBRARY} )
