--- a/logging/examples/CMakeLists.txt
+++ b/logging/examples/CMakeLists.txt
@@ -35,7 +35,7 @@
 # LogTest example, here we compile also LOG_TRACE macros
 
 add_executable( LogTest LogTest.cpp )
-target_link_libraries( LogTest ${LOGGING_LIBRARY} )
+target_link_libraries( LogTest ${logging_LIBRARY} )
 set_target_properties( LogTest PROPERTIES COMPILE_FLAGS -DLAMA_LOG_LEVEL_TRACE )
 
 # ThreadTest example, here we need the Boost Thread library
@@ -50,7 +50,7 @@ find_package ( Boost COMPONENTS thread system )
 if ( Boost_THREAD_FOUND )
     if ( Boost_SYSTEM_FOUND )
         add_executable( ThreadTest ThreadTest.cpp )
-        target_link_libraries( ThreadTest ${LOGGING_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
+        target_link_libraries( ThreadTest ${logging_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
     else ()
         message ( STATUS "Boost system library not found" )
     endif ()
@@ -65,7 +65,7 @@ find_package ( OpenMP )
 if ( OPENMP_FOUND )
     # Adding this example only possible if OpenMP is available
     add_executable( OpenMPTest OpenMPTest.cpp )
-    target_link_libraries( OpenMPTest ${LOGGING_LIBRARY} )
+    target_link_libraries( OpenMPTest ${logging_LIBRARY} )
     set_target_properties( OpenMPTest PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS} )
     set_target_properties( OpenMPTest PROPERTIES LINK_FLAGS ${OpenMP_CXX_FLAGS} )
 else ()
