--- a/cudamem/CMakeLists.txt
+++ b/cudamem/CMakeLists.txt
@@ -102,6 +102,9 @@ endif ( WIN32 )
 
 add_definitions( -DLAMA_LOG_LEVEL_DEBUG )
 
+set ( ADDITIONAL_CXX_FLAGS "-Wl,--no-as-needed" )
+set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
+
 add_subdirectory( examples )
 
 ### install ###
