--- a/logging/examples/CMakeLists.txt
+++ b/logging/examples/CMakeLists.txt
@@ -32,11 +32,11 @@
 
 # Try to find OpenMP compile and link flags for the OpenMP example
 
-# LogTest example, here we compile also LOG_TRACE macros
+# DemoLogging example, here we compile also LOG_TRACE macros
 
-add_executable( LogTest LogTest.cpp )
-target_link_libraries( LogTest ${logging_LIBRARY} )
-set_target_properties( LogTest PROPERTIES COMPILE_FLAGS -DLAMA_LOG_LEVEL_TRACE )
+add_executable( DemoLogging DemoLogging.cpp )
+target_link_libraries( DemoLogging ${logging_LIBRARY} )
+set_target_properties( DemoLogging PROPERTIES COMPILE_FLAGS -DLAMA_LOG_LEVEL_TRACE )
 
 # ThreadTest example, here we need the Boost Thread library
 
@@ -49,8 +49,8 @@ find_package ( Boost COMPONENTS thread system )
 
 if ( Boost_THREAD_FOUND )
     if ( Boost_SYSTEM_FOUND )
-        add_executable( ThreadTest ThreadTest.cpp )
-        target_link_libraries( ThreadTest ${logging_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
+        add_executable( LogThreads LogThreads.cpp )
+        target_link_libraries( LogThreads ${logging_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY} )
     else ()
         message ( STATUS "Boost system library not found" )
     endif ()
@@ -64,11 +64,11 @@ find_package ( OpenMP )
 
 if ( OPENMP_FOUND )
     # Adding this example only possible if OpenMP is available
-    add_executable( OpenMPTest OpenMPTest.cpp )
-    target_link_libraries( OpenMPTest ${logging_LIBRARY} )
-    set_target_properties( OpenMPTest PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS} )
-    set_target_properties( OpenMPTest PROPERTIES LINK_FLAGS ${OpenMP_CXX_FLAGS} )
+    add_executable( LogOpenMP LogOpenMP.cpp )
+    target_link_libraries( LogOpenMP ${logging_LIBRARY} )
+    set_target_properties( LogOpenMP PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS} )
+    set_target_properties( LogOpenMP PROPERTIES LINK_FLAGS ${OpenMP_CXX_FLAGS} )
 else ()
-    message ( STATUS "OpenMP example not built, no compiler option found" )
+    message ( STATUS "LogOpenMP example not built, no compiler option found" )
 endif()
 
