--- a/cudamem/CMakeLists.txt
+++ b/cudamem/CMakeLists.txt
@@ -106,6 +106,7 @@ set ( ADDITIONAL_CXX_FLAGS "-Wl,--no-as-needed" )
 set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
 
 add_subdirectory( examples )
+add_subdirectory( test )
 
 ### install ###
 
