--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -52,11 +52,13 @@ set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
 # Set default build type to RELEASE, can be changed via ccmake
 
-if (NOT CMAKE_BUILD_TYPE)
-   set(CMAKE_BUILD_TYPE RELEASE CACHE STRING
+if ( NOT CMAKE_BUILD_TYPE )
+   set ( CMAKE_BUILD_TYPE RELEASE CACHE STRING
       "Choose the type of build, options are: None Debug Release."
       FORCE)
-endif (NOT CMAKE_BUILD_TYPE)
+endif ( NOT CMAKE_BUILD_TYPE )
+
+include ( SetCPPFlags )
 
 find_package( Boost REQUIRED COMPONENTS )
 
